# Ecifircas

./: .gitignore  CMakeLists.txt  README.md
Ecifircas/: Ecifircas.sln
Ecifircas/Ecifircas/: Ecifircas.cpp  Ecifircas.vcxproj  Ecifircas.vcxproj.filters  bitboard.cpp  bitboard.h  board.cpp  board.h  eval.cpp  eval.h  main.cpp  movegen.cpp  movegen.h  perft.cpp  perft.h  search.cpp  search.h  types.h  uci.cpp  uci.h
Ecifircas/Google Test/: Google Test.vcxproj
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  main.cpp  movegen.h  search.cpp  search.h  types.h  uci.cpp
